```mermaid
classDiagram
direction LR

%% ==================== FRONTEND ====================

class TransactionControllerFE["TransactionController"] {
    <<frontend controller>>
    + Instructor(page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, tab: string, payoutPage: int, payoutPageSize: int, payoutKeyword: string?, payoutSortBy: string?, payoutStatus: string?, year: int?, month: int?, courseSortBy: string?) Task~IActionResult~
}

class InstructorFinancePageVM {
    <<view model>>
    + Transactions : TransactionPagedVM
    + Payouts : InstructorPayoutPagedViewModel
    + CourseRevenues : List~InstructorCourseRevenueResponse~
}

class InstructorPayoutPagedViewModel {
    <<view model>>
    + Items : List~InstructorPayoutViewModel~
    + TotalCount : int
    + Page : int
    + PageSize : int
    + TotalPages : int
}

class InstructorPayoutViewModel {
    <<view model>>
    + PayoutId : int
    + Amount : decimal
    + PayoutDate : DateTime
    + IsPaid : bool
    + CourseTitle : string
    + TotalAmount : decimal
    + PayoutStatus : string?
    + PaidToBankAt : DateTime?
    + StripeTransferId : string?
    + StripePayoutId : string?
}

%% ==================== BACKEND - CONTROLLER ====================

class InstructorControllerBE["InstructorController"] {
    <<backend controller>>
    - _instructorService : IInstructorService
    
    + GetPayouts(page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~IActionResult~
    - GetUserId() int?
}

%% ==================== BACKEND - DTOs ====================

class PagedResultInstructorPayoutDto["PagedResult~InstructorPayoutDto~"] {
    <<dto>>
    + Items : IEnumerable~InstructorPayoutDto~
    + TotalCount : int
    + Page : int
    + PageSize : int
    + TotalPages : int
}

class InstructorPayoutDto {
    <<dto>>
    + PayoutId : int
    + Amount : decimal
    + PayoutDate : DateTime
    + IsPaid : bool
    + CourseTitle : string
    + TotalAmount : decimal
    + PayoutStatus : string?
    + PaidToBankAt : DateTime?
    + StripeTransferId : string?
    + StripePayoutId : string?
}

%% ==================== BACKEND - DOMAIN ENTITIES ====================

class InstructorPayout {
    + PayoutId : int
    + TransactionId : int?
    + InstructorId : int?
    + PayoutAmount : decimal
    + PayoutDate : DateTime
    + IsPaid : bool
    + PayoutStatus : string
    + StripeTransferId : string?
    + StripePayoutId : string?
    + PaidToBankAt : DateTime?
    + Transaction : Transaction?
    + Instructor : Instructor?
}

class Instructor {
    + InstructorId : int
    + ProfessionalTitle : string?
    + ExpertiseCategories : string?
    + LinkedinUrl : string?
    + YoutubeUrl : string?
    + FacebookUrl : string?
    + DocumentUrl : string?
    + ApprovalStatus : string?
    + RejectionReason : string?
    + StripeAccountId : string?
    + StripeOnboardingStatus : string?
    + PayoutsEnabled : bool?
    + ChargesEnabled : bool?
    + StripeCountry : string?
    + Courses : ICollection~Course~
    + InstructorPayouts : ICollection~InstructorPayout~
    + Quizzes : ICollection~Quiz~
    + InstructorNavigation : User
}

%% ==================== BACKEND - SERVICE INTERFACES ====================

class IInstructorService {
    <<interface>>
    + GetPayoutsAsync(userId: int, page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~PagedResult~InstructorPayoutDto~~ *
}

class IInstructorRepository {
    <<interface>>
    + GetPayoutsAsync(userId: int, page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~PagedResult~InstructorPayoutDto~~ *
}

%% ==================== BACKEND - IMPLEMENTATIONS ====================

class InstructorService {
    - _repo : IInstructorRepository
    
    + GetPayoutsAsync(userId: int, page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~PagedResult~InstructorPayoutDto~~
}

class InstructorRepository {
    - _context : AppDbContext
    
    + GetPayoutsAsync(userId: int, page: int, pageSize: int, keyword: string?, sortBy: string?, status: string?, year: int?, month: int?) Task~PagedResult~InstructorPayoutDto~~
}

class AppDbContext {
    + InstructorPayouts : DbSet~InstructorPayout~
}

%% ==================== RELATIONSHIPS ====================

%% === COMPOSITION (filled diamond) ===
InstructorFinancePageVM *-- InstructorPayoutPagedViewModel
InstructorPayoutPagedViewModel *-- InstructorPayoutViewModel
PagedResultInstructorPayoutDto *-- InstructorPayoutDto
Instructor *-- InstructorPayout

%% === UNIDIRECTIONAL ASSOCIATION (solid arrow) ===
InstructorControllerBE --> IInstructorService
InstructorService --> IInstructorRepository
InstructorRepository --> AppDbContext

%% === INTERFACE REALIZATION ===
InstructorService ..|> IInstructorService
InstructorRepository ..|> IInstructorRepository

%% === DEPENDENCY (dashed arrows) ===
TransactionControllerFE ..> InstructorControllerBE
TransactionControllerFE ..> InstructorFinancePageVM
InstructorControllerBE ..> PagedResultInstructorPayoutDto
InstructorService ..> PagedResultInstructorPayoutDto
InstructorRepository ..> PagedResultInstructorPayoutDto
InstructorRepository ..> InstructorPayoutDto
InstructorRepository ..> InstructorPayout

%% ==================== STYLES ====================

classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000
```
